Fix potential resource leak